--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DB_CONNECT=mongodb+srv://chhechinyong:helloworld01@testing-zoero.mongodb.net/test?retryWrites=true&w=majority
+TOKEN_SECRET=bcvnjdjfhhsjadjasdlf
