--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hapi/joi": "^15.1.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "chalk": "^2.4.2",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
