--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.7"
+    "mongoose": "^5.6.7",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {},
   "description": ""
